# FastPolygonCollision

./: .gitmodules  CMakeLists.txt  Optimization notes  Speed Test Data.ods
src/: Collision.cpp  Collision.h  CollisionPoly.cpp  CollisionPoly.h  ContiguousDataManager.h  PolyEntity.cpp  PolyEntity.h  SlowCollisionPoly.h  VectorUtils.h  main.cpp
src/lib/: JMath.h  Rand.cpp  Rand.h  RandomPolygon.h  Vec2Util.h
tests/: SpeedTest.cpp  SpeedTest.h  TestCollisionPoly.cpp  TestCollisionPoly.h
